# LuxPaint

./: CMakeLists.txt  Dockerfile
otherLibs/nfd/: nfd_gtk.cpp
raylib/include/: raylib.h  rlgl.h
src/: App.cpp  App.h  Defines.h  InputActions.def  Macros.h  main.cpp
src/App/: App.cpp  App.h  AppData.h
src/App/AppData/: AppData.cpp  AppData.h
src/Automatition/Initializables/: Initializable.cpp  Initializable.h  Initializables.cpp  Initializables.h
src/Automatition/Updatables/: Updatable.h  Updatables.cpp  Updatables.h  UpdatablesManager.cpp  UpdatablesManager.h
src/Canvas/: Canvas.cpp  Canvas.h
src/Canvas/MarchingAntsSelector/: MarchingAntsSelector.cpp  MarchingAntsSelector.h
src/Canvas/Selectors/: MarchingAntsSelector.cpp  MarchingAntsSelector.h  SelectionMask.h
src/Debug/: Debug.cpp  Debug.h
src/Debug/Tests/: Test.h  TestResult.h  TestTypes.h  Tests.h
src/Debug/Tests/SerializationTests/: SerializationTest.h
src/Math/: Matrx.h  Matx.h  Vec2.h
src/PaintTools/: PenTool.cpp  PenTool.h
src/PaintTools/Shared/: Tool.cpp  Tool.h
src/PaintTools/ToolSet/: ToolSet.cpp  ToolSet.h
src/Render/: Text.cpp  Text.h  UIObject.cpp  UIObject.h  UIObjectManager.cpp  UIObjectManager.h  UIObjectsManager.cpp  UIObjectsManager.h
src/Render/Extensions/: UIFocusOutliner.h
src/Render/Prefabs/: Button.cpp  Button.h  InputField.cpp  InputField.h  Slider.cpp  Slider.h
src/Shaders/: rounded_mask.fs
src/Shared/Animator/: AnimationValue.h  AnimationValue.tpp  Animator.cpp  Animator.h
src/Shared/Calculations/: Calc.h  CalcUIO.cpp
src/Shared/DelayedAction/: DelayedAction_inSeconds.h  DelayedAction_until.h
src/Shared/FilesManager/: FilesManager.cpp
src/Shared/InputActionListener/: InputActionListener.cpp  InputActionListener.h
src/Shared/KeyBindings/: KeyNames.h  Keybindings.cpp  Keybindings.h
src/Shared/Keybindings/: Keybindings.cpp  Keybindings.h
src/Shared/Serializer/: Serializer.cpp  Serializer.h
src/Shared/Singleton/: Singleton.h
src/Shared/SnapshotsManager/: SnapshotManager.cpp  SnapshotManager.h
src/Shared/SnapshotsManager/SnapshotsTypes/: ImageSnapshot.h  Snapshot.h
src/Shared/Timer/: Timer.cpp  Timer.h
src/Shared/UIObjects/: Text.cpp  Text.h  UIObject.cpp  UIObject.h  UIObjectsManager.cpp  UIObjectsManager.h
src/Shared/UIObjects/Extensions/: UIFocusOutliner.h
src/Shared/UIObjects/Prefabs/: Button.h  InputField.cpp  InputField.h  Slider.cpp  Slider.h
src/Shared/Utils/: Utils.cpp  Utils.h  UtilsAppData.cpp  UtilsColors.cpp  UtilsConvert.cpp  UtilsFiles.cpp  UtilsInput.cpp  UtilsView.cpp
src/Shared/Utils/AppData/: utiAppData.cpp  utiAppData.h
src/Shared/Utils/Colors/: Colors.cpp  Colors.h
src/Shared/Utils/Convert/: utiConvert.cpp  utiConvert.h
src/Shared/Utils/Files/: utiFiles.cpp  utiFiles.h
src/Shared/Utils/Input/: Input.cpp  Input.h
src/Shared/Utils/System/: utiSystem.cpp  utiSystem.h
src/Shared/Utils/Text/: utiText.cpp  utiText.h
src/Shared/Utils/Time/: utiTime.cpp  utiTime.h
src/Shared/Utils/View/: utiView.cpp  utiView.h
src/Static/Animator/: Animator.cpp  Animator.h
src/Static/FilesManager/: FilesManager.cpp  FilesManager.h
src/Static/Utils/: Utils.cpp  Utils.h
src/StaticShared/Animator/: AnimationValue.h  Animator.cpp  Animator.h
src/StaticShared/DelayedAction/: DelayedAction.h  DelayedAction_until.h  DelayedActions.h
src/StaticShared/FilesManager/: FilesManager.cpp  FilesManager.h
src/StaticShared/FrontPanel/: FrontPanel.cpp  FrontPanel.h
src/StaticShared/InputManager/: InputManager.cpp  InputManager.h
src/StaticShared/KeyBindings/: Keybindings.cpp  Keybindings.h
src/StaticShared/MiniMenu/: MiniMenu.cpp  MiniMenu.h
src/StaticShared/Singleton/: Singleton.h
src/StaticShared/Utils/: Utils.cpp  Utils.h
src/Tools/PaintTools/: BrushTool.h  BucketTool.h  EraserTool.h  PenTool.h
src/Tools/SelectionTools/: RectangleSelection.cpp  RectangleSelection.h
src/Tools/ShapesTools/: CircleTool.h  LineTool.h  RectangleTool.h
src/Tools/Shared/: Tool.cpp  Tool.h
src/Tools/ToolSet/: ToolSet.cpp  ToolSet.h
src/UI/Canvas/: Canvas.cpp  Canvas.h
src/UI/Canvas/Selectors/: MarchingAntsSelector.cpp  MarchingAntsSelector.h  SelectionMask.cpp
src/UI/ColorHolder/: ColorHolder.cpp  ColorHolder.h
src/UI/ColorPicker/: ColorPicker.cpp  ColorPicker.h
src/UI/ManagerButton/: BlankCanvasBuilder.h  ManagerButton.cpp  ManagerButton.h  SettingsBuilder.h
src/UI/ManagerButton/Settings/: ColorsSettingsBuilder.h  KeybindingsSettingsBuilder.h  SettingsBuilder.h
src/UI/MiniMenu/: MiniMenu.cpp  MiniMenu.h  MiniMenuBuilder.h
src/UI/MiniMenus/BlankCanvas/: BlankCanvasBuilder.h
src/UI/MiniMenus/MiniMenu/: MiniMenu.cpp  MiniMenu.h  MiniMenuBuilder.h
src/UI/MiniMenus/Settings/: ColorsSettingsBuilder.h  KeybindingsSettingsBuilder.h  SettingsBuilder.h
src/UI/ToolBox/: ToolBox.cpp  ToolBox.h
src/UI/ToolSizeSlider/: ToolSizeSlider.cpp  ToolSizeSlider.h
src/Updatables/: Updatables.cpp
